Fixed spacing naviagtion bar with styling.

--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,14 @@
 body {
-    font-family: 'Akshar';
     background-color: antiquewhite;
     
-    margin: 0;
-    padding: 1% 7.5% 0;
+    font-family: 'Akshar';
+    font-size: 19px;
+
+    max-width: 65em;
+    
+    margin: 2em auto 0;
+    
+
 
     display: flex;
     flex-direction: column;
@@ -13,7 +18,7 @@ body {
 
 #default-nav-bar ul, li{
     list-style: none;
-     
+
     display: inline;
 
     padding: 0;
@@ -29,25 +34,44 @@ body {
 }
 
 
-#nav-bar-logo a{
+#default-nav-bar section {
+    flex: 2;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+
+#default-nav-bar section li{
+    min-width: 5em;
+    text-align: center;
+}
+
+
+#default-nav-bar section a{
+    min-width: 3em;
+    padding: 0.3em;
+}
+
+
+#default-nav-bar a {
     color: black;
+    text-decoration: none;
+}
+
+
+#nav-bar-logo a{
+    color: #FC4F3F;
 
     font-family: 'Abril Flatface';
     font-family: 'DM Serif Display';
+    font-size: 2em;
     font-weight: bold;
 
     text-align: center;
     text-decoration: none;
 
     flex: 1;
-}
-
-
-#default-nav-bar section {
-    flex: 2;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
 }
 
 
@@ -59,10 +83,36 @@ body {
 #default-nav-bar #sign-up{
     flex: 1;
     text-align: right;
+    
+}
+
+
+#default-nav-bar #sign-up a i{
+    vertical-align: baseline;
+}
+
+
+#default-nav-bar #sign-up a{
+    border: 2px solid #FC4F3F;
+    border-radius: 50px;
+    padding: 0.3em 0.6em;
+}
+
+#default-nav-bar #sign-up a:hover{
+    color: antiquewhite;
+    background-color: #FC4F3F;
+}
+
+#default-nav-bar section a:hover{
+    /* color: #B88849; */
+    box-shadow: 2px 2px 2px black;
+    box-shadow: inset 2px 2px 2px black;
+    /* background-color: #FC4F3F; */
+    
 }
 
 
 *::selection{
     color: white;
-    background-color: #F65D4E;
+    background-color: #F54D3D;
 }
